--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     .container {
       width: 70%;
       margin: auto;
-      background: white;
+      background: blash;
       padding: 20px;
       border-radius: 10px;
       box-shadow: 0px 0px 10px #ccc;
