--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     padding-top: 30px;
 
     /* Custom Background */
-    background-image: url('https://images.unsplash.com/photo-1518770660439-4636190af475');
+    background-image: url('blue_arch_nowatermark.png');
     background-size: cover;
     background-attachment: fixed;
     background-position: center;
