--- a/index.html
+++ b/index.html
@@ -7,66 +7,93 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 
 <style>
-  body {
-    font-family: Arial, sans-serif;
-    text-align: center;
-    padding-top: 30px;
+ body {
+  font-family: Arial, sans-serif;
+  text-align: center;
+  padding-top: 20px;
 
-    /* Custom Background */
-    background-image: url('blue_arch_nowatermark.png');
-    background-size: cover;
-    background-attachment: fixed;
-    background-position: center;
+  background-image: url('blue_arch_nowatermark.png');
+  background-size: cover;
+  background-attachment: fixed;
+  background-position: center;
 
-    color: white;
-  }
+  color: white;
+}
 
+.container {
+  width: 70%;
+  margin: auto;
+  background: rgba(20, 20, 20, 0.9);
+  padding: 20px;
+  border-radius: 12px;
+  box-shadow: 0px 0px 15px black;
+}
+
+h1 {
+  color: #4CAF50;
+}
+
+h2 {
+  margin-top: 25px;
+  color: #cccccc;
+}
+
+a {
+  display: block;
+  margin: 10px auto;
+  padding: 12px;
+  width: 70%;
+  text-decoration: none;
+  background: #222;
+  color: white;
+  border-radius: 8px;
+  font-weight: bold;
+  border: 1px solid #444;
+  transition: 0.3s;
+}
+
+a:hover {
+  background: #4CAF50;
+  color: black;
+}
+
+i {
+  margin-right: 8px;
+}
+
+footer {
+  margin-top: 20px;
+  font-size: 12px;
+  color: gray;
+}
+
+/* -------- MOBILE RESPONSIVE SECTION -------- */
+
+@media screen and (max-width: 900px) {
   .container {
-    width: 70%;
-    margin: auto;
-    background: rgba(20, 20, 20, 0.9);
-    padding: 20px;
-    border-radius: 12px;
-    box-shadow: 0px 0px 15px black;
-  }
-
-  h1 {
-    color: #4CAF50;
-  }
-
-  h2 {
-    margin-top: 25px;
-    color: #cccccc;
+    width: 85%;
   }
 
   a {
-    display: block;
-    margin: 15px auto;
-    padding: 25px;
-    width: 70%;
-    text-decoration: none;
-    background: #222;
-    color: white;
-    border-radius: 8px;
-    font-weight: bold;
-    border: 1px solid #444;
-    transition: 0.3s;
+    width: 85%;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .container {
+    width: 95%;
+    padding: 15px;
   }
 
-  a:hover {
-    background: #4CAF50;
-    color: black;
+  a {
+    width: 95%;
+    padding: 14px;
   }
 
-  i {
-    margin-right: 8px;
+  body {
+    padding-top: 10px;
   }
-
-  footer {
-    margin-top: 20px;
-    font-size: 12px;
-    color: gray;
-  }
+}
 
 </style>
 </head>
