--- a/index.html
+++ b/index.html
@@ -116,12 +116,12 @@
   }
 
   .link-box {
-    width: 90%;           /* almost full width */
+    width: 70%;           /* almost full width */
     height: 170px;        /* taller buttons for easy tapping */
   }
 
   .link-box i {
-    font-size: 50px;      /* bigger icon */
+    font-size: 40px;      /*  icon control */
   }
 
   .link-label {
