--- a/index.html
+++ b/index.html
@@ -1,198 +1,262 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>My Links Hub</title>
-  
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Interactive Link Dashboard</title>
 
-<!-- Font Awesome Icons -->
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 
-<style>
-  body {
-    font-family: Arial, sans-serif;
-    text-align: center;
-    padding-top: 20px;
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      text-align: center;
+      padding-top: 20px;
 
-    /* Background image */
-    background-image: url('blue_arch_nowatermark.png');
-    background-size: cover;
-    background-attachment: fixed;
-    background-position: center;
+     background-image: url('blue_arch_nowatermark.png');
+      background-size: cover;
+      background-attachment: fixed;
+      background-position: center;
 
-    color: white;
-  }
+      color: white;
+    }
 
-  /* Fully transparent container */
-  .container {
-    width: 90%;
-    max-width: 1000px;
-    margin: auto;
-    background: transparent;
-    padding: 20px;
-    border-radius: 15px;
-    /* Optional shadow for depth */
-    box-shadow: 0px 0px 20px rgba(0,0,0,0.3);
-  }
+    .container {
+      width: 90%;
+      max-width: 1000px;
+      margin: auto;
+      background: transparent;
+      padding: 20px;
+      border-radius: 15px;
+      box-shadow: 0px 0px 20px rgba(0,0,0,0.3);
+    }
 
-  h1 {
-    color: #4CAF50;
-    margin-bottom: 20px;
-  }
+    h1 {
+      color: #4CAF50;
+      margin-bottom: 20px;
+    }
 
-  h2 {
-    margin-top: 30px;
-    color: #cccccc;
-  }
+    h2 {
+      margin-top: 30px;
+      color: #cccccc;
+    }
 
-  /* Flex grid for buttons */
-  .link-grid {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    gap: 20px;
-    margin-top: 15px;
-  }
+    .link-grid {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 20px;
+      margin-top: 15px;
+    }
 
-  /* Buttons (icons + labels) */
-  .link-box {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-
-    width: 120px;
-    height: 120px;
-    background: rgba(34, 34, 34, 0.5); /* slightly transparent */
-    border-radius: 20px;
-    border: 1px solid #fff;
-    text-decoration: none;
-    color: white;
-    font-weight: bold;
-    transition: 0.3s;
-  }
-
-  .link-box:hover {
-    background: rgba(76, 175, 80, 0.9);
-    color: black;
-    transform: scale(1.05);
-  }
-
-  .link-box i {
-    font-size: 36px;
-    margin-bottom: 8px;
-  }
-
-  .link-label {
-    font-size: 14px;
-    text-align: center;
-  }
-
-  footer {
-    margin-top: 25px;
-    font-size: 12px;
-    color: gray;
-  }
-
-  /* -------- MOBILE RESPONSIVE -------- */
-  @media screen and (max-width: 900px) {
     .link-box {
-      width: 140px;
-      height: 300px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+
+      width: 120px;
+      height: 120px;
+      background: rgba(34, 34, 34, 0.5);
+      border-radius: 20px;
+      border: 1px solid #fff;
+      text-decoration: none;
+      color: white;
+      font-weight: bold;
+      transition: 0.3s;
+      cursor: grab;
+    }
+
+    .link-box.dragging {
+      opacity: 0.5;
+      transform: scale(1.05);
     }
 
     .link-box i {
-      font-size: 40px;
+      font-size: 36px;
+      margin-bottom: 8px;
     }
 
     .link-label {
-      font-size: 16px;
+      font-size: 14px;
+      text-align: center;
     }
-  }
 
- @media screen and (max-width: 800px) {  /* covers phones like S25 Plus */
-  .link-grid {
-    gap: 15px;
-  }
+    footer {
+      margin-top: 25px;
+      font-size: 12px;
+      color: gray;
+    }
 
-  .link-box {
-    width: 50%;           /* almost full width */
-    height: 170px;        /* taller buttons for easy tapping */
-  }
+    /* Add / Remove link form */
+    #addForm {
+      margin-top: 30px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 8px;
+    }
 
-  .link-box i {
-    font-size: 40px;      /*  icon control */
-  }
+    #addForm input {
+      padding: 6px;
+      width: 80%;
+      max-width: 300px;
+      border-radius: 6px;
+      border: 1px solid #ccc;
+    }
 
-  .link-label {
-    font-size: 20px;      /* larger text */
-  }
-}
+    #addForm button {
+      padding: 8px 12px;
+      border-radius: 8px;
+      border: none;
+      background: #4CAF50;
+      color: white;
+      font-weight: bold;
+      cursor: pointer;
+    }
 
+    #addForm button:hover {
+      background: #3e8e41;
+    }
 
-</style>
+    /* MOBILE RESPONSIVE */
+    @media screen and (max-width: 800px) {
+      .link-box {
+        width: 140px;
+        height: 140px;
+      }
+
+      .link-box i {
+        font-size: 40px;
+      }
+
+      .link-label {
+        font-size: 16px;
+      }
+    }
+
+    @media screen and (max-width: 600px) {
+      .link-box {
+        width: 90%;
+        height: 170px;
+      }
+
+      .link-box i {
+        font-size: 50px;
+      }
+
+      .link-label {
+        font-size: 20px;
+      }
+    }
+  </style>
 </head>
 
 <body>
 
 <div class="container">
+  <h1><i class="fa-solid fa-link"></i> My Interactive Dashboard</h1>
 
-  <h1><i class="fa-solid fa-link"></i> My Link Dashboard</h1>
-
-  <h2>School Links</h2>
-  <div class="link-grid">
-    <a class="link-box" href="https://my.unoh.edu" target="_blank">
-      <i class="fa-solid fa-school"></i>
-      <span class="link-label">UNOH Portal</span>
-    </a>
-
-    <a class="link-box" href="https://canvas.unoh.edu" target="_blank">
-      <i class="fa-solid fa-book"></i>
-      <span class="link-label">Canvas</span>
-    </a>
+  <h2>Links</h2>
+  <div class="link-grid" id="linkGrid">
+    <!-- Buttons will be dynamically generated -->
   </div>
 
-  <h2>Personal Links</h2>
-  <div class="link-grid">
-    <a class="link-box" href="https://gmail.com" target="_blank">
-      <i class="fa-solid fa-envelope"></i>
-      <span class="link-label">Gmail</span>
-    </a>
-
-    <a class="link-box" href="https://youtube.com" target="_blank">
-      <i class="fa-brands fa-youtube"></i>
-      <span class="link-label">YouTube</span>
-    </a>
-
-    <a class="link-box" href="https://github.com" target="_blank">
-      <i class="fa-brands fa-github"></i>
-      <span class="link-label">GitHub</span>
-    </a>
-  </div>
-
-  <h2>Tech News</h2>
-  <div class="link-grid">
-    <a class="link-box" href="https://www.theverge.com" target="_blank">
-      <i class="fa-solid fa-newspaper"></i>
-      <span class="link-label">The Verge</span>
-    </a>
-
-    <a class="link-box" href="https://arstechnica.com" target="_blank">
-      <i class="fa-solid fa-microchip"></i>
-      <span class="link-label">Ars Technica</span>
-    </a>
-
-    <a class="link-box" href="https://techcrunch.com" target="_blank">
-      <i class="fa-solid fa-rocket"></i>
-      <span class="link-label">TechCrunch</span>
-    </a>
-  </div>
+  <form id="addForm">
+    <input type="text" id="linkName" placeholder="Site Name" required>
+    <input type="url" id="linkURL" placeholder="https://example.com" required>
+    <input type="text" id="linkIcon" placeholder="Font Awesome icon class, e.g. fa-solid fa-school">
+    <button type="submit">Add Link</button>
+  </form>
 
   <footer>
-    Custom dashboard powered by GitHub Pages
+    Dashboard powered by GitHub Pages | Drag & Drop to Rearrange
   </footer>
-
 </div>
+
+<script>
+  // --- INITIAL LINKS ---
+  const defaultLinks = [
+    {name: "UNOH Portal", url: "https://my.unoh.edu", icon: "fa-solid fa-school"},
+    {name: "Canvas", url: "https://canvas.unoh.edu", icon: "fa-solid fa-book"},
+    {name: "Gmail", url: "https://gmail.com", icon: "fa-solid fa-envelope"},
+    {name: "YouTube", url: "https://youtube.com", icon: "fa-brands fa-youtube"},
+    {name: "GitHub", url: "https://github.com", icon: "fa-brands fa-github"},
+    {name: "The Verge", url: "https://www.theverge.com", icon: "fa-solid fa-newspaper"}
+  ];
+
+  let links = JSON.parse(localStorage.getItem("dashboardLinks")) || defaultLinks;
+
+  const linkGrid = document.getElementById("linkGrid");
+
+  function saveLinks() {
+    localStorage.setItem("dashboardLinks", JSON.stringify(links));
+  }
+
+  function renderLinks() {
+    linkGrid.innerHTML = "";
+    links.forEach((link, index) => {
+      const a = document.createElement("a");
+      a.href = link.url;
+      a.target = "_blank";
+      a.className = "link-box";
+      a.setAttribute("draggable", "true");
+      a.dataset.index = index;
+
+      a.innerHTML = `<i class="${link.icon || 'fa-solid fa-link'}"></i>
+                     <span class="link-label">${link.name}</span>`;
+
+      // --- Drag and Drop ---
+      a.addEventListener("dragstart", e => {
+        e.dataTransfer.setData("text/plain", index);
+        a.classList.add("dragging");
+      });
+
+      a.addEventListener("dragend", () => {
+        a.classList.remove("dragging");
+      });
+
+      a.addEventListener("dragover", e => e.preventDefault());
+      a.addEventListener("drop", e => {
+        e.preventDefault();
+        const draggedIndex = e.dataTransfer.getData("text/plain");
+        const targetIndex = a.dataset.index;
+
+        // swap
+        [links[draggedIndex], links[targetIndex]] = [links[targetIndex], links[draggedIndex]];
+        saveLinks();
+        renderLinks();
+      });
+
+      // --- Remove on double click ---
+      a.addEventListener("dblclick", () => {
+        if (confirm(`Remove "${link.name}"?`)) {
+          links.splice(index, 1);
+          saveLinks();
+          renderLinks();
+        }
+      });
+
+      linkGrid.appendChild(a);
+    });
+  }
+
+  renderLinks();
+
+  // --- Add new link ---
+  document.getElementById("addForm").addEventListener("submit", e => {
+    e.preventDefault();
+    const name = document.getElementById("linkName").value;
+    const url = document.getElementById("linkURL").value;
+    const icon = document.getElementById("linkIcon").value;
+
+    links.push({name, url, icon});
+    saveLinks();
+    renderLinks();
+
+    // reset form
+    e.target.reset();
+  });
+</script>
 
 </body>
 </html>
