--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Interactive Link Dashboard</title>
+  <title>Categorized Link Dashboard</title>
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
@@ -33,12 +33,16 @@
     h1 { color: #4CAF50; margin-bottom: 20px; }
     h2 { margin-top: 30px; color: #cccccc; }
 
+    .category-section {
+      margin-top: 20px;
+    }
+
     .link-grid {
       display: flex;
       flex-wrap: wrap;
       justify-content: center;
       gap: 20px;
-      margin-top: 15px;
+      margin-top: 10px;
     }
 
     .link-box {
@@ -61,7 +65,6 @@
     }
 
     .link-box.dragging { opacity: 0.5; transform: scale(1.05); }
-
     .link-box i { font-size: 36px; margin-bottom: 8px; }
     .link-label { font-size: 14px; text-align: center; }
 
@@ -75,11 +78,19 @@
       gap: 8px;
     }
 
-    #addForm input { padding: 6px; width: 80%; max-width: 300px; border-radius: 6px; border: 1px solid #ccc; }
+    #addForm input, #addForm select {
+      padding: 6px;
+      width: 80%;
+      max-width: 300px;
+      border-radius: 6px;
+      border: 1px solid #ccc;
+    }
+
     #addForm button {
       padding: 8px 12px; border-radius: 8px; border: none; background: #4CAF50; color: white;
       font-weight: bold; cursor: pointer;
     }
+
     #addForm button:hover { background: #3e8e41; }
 
     /* MOBILE */
@@ -95,7 +106,6 @@
       .link-label { font-size: 20px; }
     }
 
-    /* Edit overlay */
     .edit-overlay {
       position: absolute;
       bottom: 0;
@@ -115,93 +125,95 @@
 <body>
 
 <div class="container">
-  <h1><i class="fa-solid fa-link"></i> Interactive Dashboard</h1>
+  <h1><i class="fa-solid fa-link"></i> Categorized Dashboard</h1>
 
-  <h2>Links</h2>
-  <div class="link-grid" id="linkGrid"></div>
+  <div id="categoriesContainer"></div>
 
   <form id="addForm">
     <input type="text" id="linkName" placeholder="Site Name" required>
     <input type="url" id="linkURL" placeholder="https://example.com" required>
     <input type="text" id="linkIcon" placeholder="Font Awesome icon class, e.g. fa-solid fa-school">
+    <select id="linkCategory">
+      <option value="School">School</option>
+      <option value="Personal">Personal</option>
+      <option value="Tech News">Tech News</option>
+    </select>
     <button type="submit">Add Link</button>
   </form>
 
-  <footer>Dashboard powered by GitHub Pages | Drag & Drop to Rearrange | Double-click or Edit to Remove</footer>
+  <footer>Dashboard powered by GitHub Pages | Drag & Drop | Double-click or Edit to Remove</footer>
 </div>
 
 <script>
   const defaultLinks = [
-    {name: "UNOH Portal", url: "https://my.unoh.edu", icon: "fa-solid fa-school"},
-    {name: "Canvas", url: "https://canvas.unoh.edu", icon: "fa-solid fa-book"},
-    {name: "Gmail", url: "https://gmail.com", icon: "fa-solid fa-envelope"},
-    {name: "YouTube", url: "https://youtube.com", icon: "fa-brands fa-youtube"},
-    {name: "GitHub", url: "https://github.com", icon: "fa-brands fa-github"},
-    {name: "The Verge", url: "https://www.theverge.com", icon: "fa-solid fa-newspaper"}
+    {name:"UNOH Portal", url:"https://my.unoh.edu", icon:"fa-solid fa-school", category:"School"},
+    {name:"Canvas", url:"https://canvas.unoh.edu", icon:"fa-solid fa-book", category:"School"},
+    {name:"Gmail", url:"https://gmail.com", icon:"fa-solid fa-envelope", category:"Personal"},
+    {name:"YouTube", url:"https://youtube.com", icon:"fa-brands fa-youtube", category:"Personal"},
+    {name:"GitHub", url:"https://github.com", icon:"fa-brands fa-github", category:"Personal"},
+    {name:"The Verge", url:"https://www.theverge.com", icon:"fa-solid fa-newspaper", category:"Tech News"}
   ];
 
   let links = JSON.parse(localStorage.getItem("dashboardLinks")) || defaultLinks;
-  const linkGrid = document.getElementById("linkGrid");
+  const categoriesContainer = document.getElementById("categoriesContainer");
 
   function saveLinks() { localStorage.setItem("dashboardLinks", JSON.stringify(links)); }
 
   function renderLinks() {
-    linkGrid.innerHTML = "";
-    links.forEach((link, index) => {
-      const a = document.createElement("a");
-      a.href = link.url;
-      a.target = "_blank";
-      a.className = "link-box";
-      a.setAttribute("draggable", "true");
-      a.dataset.index = index;
-      a.innerHTML = `<i class="${link.icon || 'fa-solid fa-link'}"></i>
+    categoriesContainer.innerHTML = "";
+    const categories = [...new Set(links.map(l => l.category))];
+    categories.forEach(cat => {
+      const section = document.createElement("div");
+      section.className = "category-section";
+      section.innerHTML = `<h2>${cat}</h2><div class="link-grid" data-category="${cat}"></div>`;
+      const grid = section.querySelector(".link-grid");
+
+      links.filter(l=>l.category===cat).forEach((link,index)=>{
+        const a = document.createElement("a");
+        a.href=link.url; a.target="_blank"; a.className="link-box"; a.setAttribute("draggable","true"); 
+        a.dataset.index=index;
+        a.innerHTML=`<i class="${link.icon || 'fa-solid fa-link'}"></i>
                      <span class="link-label">${link.name}</span>
                      <div class="edit-overlay">Edit</div>`;
 
-      // --- Drag & Drop ---
-      a.addEventListener("dragstart", e => {
-        e.dataTransfer.setData("text/plain", index);
-        a.classList.add("dragging");
-      });
-      a.addEventListener("dragend", () => a.classList.remove("dragging"));
-      a.addEventListener("dragover", e => e.preventDefault());
-      a.addEventListener("drop", e => {
-        e.preventDefault();
-        const draggedIndex = e.dataTransfer.getData("text/plain");
-        const targetIndex = a.dataset.index;
-        [links[draggedIndex], links[targetIndex]] = [links[targetIndex], links[draggedIndex]];
-        saveLinks(); renderLinks();
+        a.addEventListener("dragstart", e=>{ e.dataTransfer.setData("text/plain", index); a.classList.add("dragging"); });
+        a.addEventListener("dragend", ()=>a.classList.remove("dragging"));
+        a.addEventListener("dragover", e=>e.preventDefault());
+        a.addEventListener("drop", e=>{
+          e.preventDefault();
+          const draggedIndex = e.dataTransfer.getData("text/plain");
+          const targetIndex = a.dataset.index;
+          [links[draggedIndex], links[targetIndex]] = [links[targetIndex], links[draggedIndex]];
+          saveLinks(); renderLinks();
+        });
+
+        a.addEventListener("dblclick", ()=>{ if(confirm(`Remove "${link.name}"?`)){ links.splice(index,1); saveLinks(); renderLinks(); } });
+
+        a.querySelector(".edit-overlay").addEventListener("click", ()=>{
+          const newName = prompt("Edit Name:", link.name)||link.name;
+          const newURL = prompt("Edit URL:", link.url)||link.url;
+          const newIcon = prompt("Edit Icon Class:", link.icon)||link.icon;
+          const newCat = prompt("Edit Category:", link.category)||link.category;
+          links[index]={name:newName,url:newURL,icon:newIcon,category:newCat};
+          saveLinks(); renderLinks();
+        });
+
+        grid.appendChild(a);
       });
 
-      // --- Remove on double click ---
-      a.addEventListener("dblclick", () => {
-        if(confirm(`Remove "${link.name}"?`)) {
-          links.splice(index, 1); saveLinks(); renderLinks();
-        }
-      });
-
-      // --- Edit overlay ---
-      a.querySelector(".edit-overlay").addEventListener("click", () => {
-        const newName = prompt("Edit Name:", link.name) || link.name;
-        const newURL = prompt("Edit URL:", link.url) || link.url;
-        const newIcon = prompt("Edit Icon Class:", link.icon) || link.icon;
-        links[index] = {name: newName, url: newURL, icon: newIcon};
-        saveLinks(); renderLinks();
-      });
-
-      linkGrid.appendChild(a);
+      categoriesContainer.appendChild(section);
     });
   }
 
   renderLinks();
 
-  // --- Add new link ---
-  document.getElementById("addForm").addEventListener("submit", e => {
+  document.getElementById("addForm").addEventListener("submit", e=>{
     e.preventDefault();
     const name = document.getElementById("linkName").value;
     const url = document.getElementById("linkURL").value;
     const icon = document.getElementById("linkIcon").value;
-    links.push({name, url, icon});
+    const category = document.getElementById("linkCategory").value;
+    links.push({name,url,icon,category});
     saveLinks(); renderLinks();
     e.target.reset();
   });
